# macra

./: .gitmodules  Cargo.toml  README.md  build.rs
.github/workflows/: ci.yml
cargo-macra/: Cargo.toml
cargo-macra/src/: main.rs
macra/: Cargo.toml
macra-hook/: Cargo.toml  build.rs
macra-hook/src/: dispatch.rs  hook_linux.rs  hook_macos.rs  hook_windows.rs  lib.rs  logging.rs  trampoline.rs  types.rs
macra-rustc-wrapper/: Cargo.toml
macra-rustc-wrapper/src/: main.rs
macra/src/: lib.rs  parse_trace.rs  trace_macros.rs
src/: lib.rs  macro_finder.rs  main.rs  parse_normal.rs  parse_trace.rs  trace_macros.rs
tests/: external_crates.rs  show_expansion.rs  test_debug_macros.rs
tests/common/: mod.rs
tests/debug_macros/: Cargo.toml
tests/debug_macros/src/: lib.rs
tests/debug_target/: Cargo.toml
tests/debug_target/src/: lib.rs
tests/test-proc-macros/: Cargo.toml
tests/test-proc-macros/src/: lib.rs
tests/test-usage/: Cargo.toml
tests/test-usage/src/: lib.rs
