[package]
name = "cargo-macra"
version = "0.1.1"
edition = "2024"
description = "CLI for working with macro expansion and diagnostics in Rust projects."
keywords = ["cargo", "macros", "rust", "tooling"]
categories = ["command-line-utilities", "development-tools"]
license = "MIT"
repository = "https://github.com/yasuo-ozu/macra"
authors = ["Yasuo Ozu <yasuo@ozu.email>"]

[workspace]
members = [
  "macra",
  "macra-hook",
  "tests/test-proc-macros",
  "tests/test-usage",
  "tests/debug_macros",
  "tests/debug_target",
]

[dependencies]
macra = { path = "macra", version = "0.1.1" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
crossterm = "0.28"
ratatui = "0.29"
syn = { version = "2", features = ["full", "parsing", "visit"] }
proc-macro2 = { version = "1", features = ["span-locations"] }
quote = "1.0.44"
filetime = "0.2"
cargo_metadata = "0.23"

[dev-dependencies]
debug-target = { path = "tests/debug_target" }
