[package]
name = "macra-hook"
version = "0.1.0"
edition = "2024"
description = "Dynamic hook library for macra runtime integrations."
keywords = ["macros", "ffi", "rust", "tooling"]
categories = ["development-tools"]
license = "MIT"
repository = "https://github.com/yasuo-ozu/macra"
authors = ["yasuo-ozu"]
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
libc = "0.2"
