[package]
name = "macra-hook"
version = "0.1.3"
edition = "2024"
rust-version = "1.86"
description = "Dynamic hook library for macra runtime integrations."
keywords = ["macros", "ffi", "rust", "tooling"]
categories = ["development-tools"]
license = "MIT"
repository = "https://github.com/yasuo-ozu/macra"
authors = ["yasuo-ozu"]
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
libc = "0.2"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = [
    "Win32_Foundation",
    "Win32_System_LibraryLoader",
    "Win32_System_Memory",
    "Win32_System_SystemServices",
    "Win32_System_Diagnostics_ToolHelp",
] }
