[package]
name = "macra-rustc-wrapper"
version = "0.1.3"
edition = "2024"
rust-version = "1.86"
description = "RUSTC_WRAPPER binary for macra-hook DLL injection on Windows."
license = "MIT"
repository = "https://github.com/yasuo-ozu/macra"
authors = ["yasuo-ozu"]
publish = false

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = [
    "Win32_Foundation",
    "Win32_System_Threading",
    "Win32_System_Memory",
    "Win32_System_LibraryLoader",
    "Win32_System_Diagnostics_Debug",
    "Win32_Security",
] }
