[package]
name = "macra"
version = "0.1.2"
edition = "2024"
description = "Core library for macro-related analysis and serialization used by cargo-macra."
keywords = ["macros", "analysis", "rust", "tooling"]
categories = ["development-tools"]
license = "MIT"
repository = "https://github.com/yasuo-ozu/macra"
authors = ["Yasuo Ozu <yasuo@ozu.email>"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
