[package]
name = "test-proc-macros"
version = "0.1.0"
edition = "2024"
description = "Procedural macro test fixture crate for macra integration tests."
keywords = ["proc-macro", "testing", "macros", "rust"]
categories = ["development-tools"]
license = "MIT"
repository = "https://github.com/yasuo-ozu/macra"
authors = ["yasuo-ozu"]
publish = false

[lib]
proc-macro = true

[dependencies]
quote = "1"
syn = { version = "2", features = ["full", "parsing"] }
proc-macro2 = "1"
